--- a/style.css
+++ b/style.css
@@ -1,63 +1,109 @@
 body {
-
-    padding-top: 11%;
-    padding-left: 35%
+    padding-top: 5.5%;
+    padding-left: 38%;
+    background-image: url("image.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    
 }
 
-.number{
-    width:100%;
-    height: 100px;
+.number {
+    width: 98%;
+    margin: 20px 18px 0 18px;
+    height: 90px;
     border-radius: 10px;
-    background-color: #3F4F44;
+    background-color: #c3cec7;
+    display: flex;
+    flex-direction: column;    
+    justify-content: center;    
+    align-items: flex-end;      
+    padding: 5px 10px;
+    box-sizing: border-box;
+    overflow: hidden;
 }
+
+.total {
+    font-size: 32px;
+    margin: 0;
+    padding: 0;
+    text-align: right;
+    width: 100%;
+}
+
+.transaction {
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+    text-align: right;
+    width: 100%;
+}
+
 
 .maindiv {
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
-    width: 75%;
-    max-width: 450px;
-    height: 470px;
-    background-color:#3F4F44;
+    max-width: 355px;
+    height: 520px;
+    background-color:#004030;
     border: none;
     border-radius: 10px;
 }
 
 .button{
-    padding: 15px 15px;
     width: 100%;
+    margin-top:10px;
+    margin-left: 18px;
+    margin-right: 18px;
+    margin-bottom:20px;
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
-    font-weight: 700;
+    gap: 6px;
+    font-weight: 800;
 }
 
 .button button {
-    color: #A27B5C;
-    height: 80px ;
-    width: 80px;
+    color: #004000;
+    height: 70px;
+    width: 75px;
     border-radius: 6px;
     border:none;
-    background-color:#2C3930;
+    background-color:#DCD0A8;
 }
 
 .button .equal {
-    background-color: #A27B5C;
-    height: 80px;
+    background-color: #4A9782;
+    height: 70px;
     color:#2C3930;
-    width: 165px;
+    width: 155px;
     font-weight: 700;
 }
 
 .number {
     display: flex;
     justify-content: end;
+    align-items: center;
 }   
 
-.total {
-    font-size: 35px;
+.button button:hover {
+    transform: scale(1.05);
+    transition: 0.2s;
 }
 
-.transaction {
-    font-size: 20px;
+.button button:active {
+    transform: scale(0.95);
+    background-color: #d6b87c;
 }
+
+.math-tip {
+    font-size: 14px;
+    font-style: italic;
+    color: #eee;
+    text-align: center;
+    margin-top: 10px;
+    height: 18px;
+    margin-bottom: 90px;
+}
+
+
